manifest/objects/ALTF__Sales_Process_Stage__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the maintenance of the Playbook Sales Process Stages. These can be accessed fas a detail section from the Sales Process page.</description>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Amber__c</fullName>
        <defaultValue>0.4</defaultValue>
        <inlineHelpText>Percentage completion (calculated as percent of achieved score on the stage) of the stage before the UI will display as amber/yellow for that stage.

Enter a value from 0 - 100. The recommended default is 50 (%).</inlineHelpText>
        <label>Amber</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Duration__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Length of time (in weeks) an opportunity typically takes to be worked through the stage.

Note that Altify will track the length of time actually taken, so that you can see how you&apos;re tracking against expectations over time.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Green__c</fullName>
        <defaultValue>0.8</defaultValue>
        <inlineHelpText>Percentage completion (calculated as percent of achieved score on the stage) on the stage before the UI will display as green for that stage.

Enter a value from 0 - 100. The recommended default is 80 (%).</inlineHelpText>
        <label>Green</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Qualification__c</fullName>
        <defaultValue>0.8</defaultValue>
        <inlineHelpText>The percentage score that must be achieved on the stage before the opportunity can move to the next stage. 

Note that all &quot;mandatory&quot; qualifiers must also be achieved before the opportunity can move.</inlineHelpText>
        <label>Qualification Threshold</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Sales_Process__c</fullName>
        <label>Sales Process</label>
        <referenceTo>ALTF__Sales_Process__c</referenceTo>
        <relationshipLabel>Sales Process Stages</relationshipLabel>
        <relationshipName>DM_Sales_Process_Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__SortOrder__c</fullName>
        <inlineHelpText>Order of the stage within the sales process pipeline</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Stage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>One of the pipeline stages associated with this Sales Process. Each process contains the Stages an Opportunity follows through its sales cycle.</description>
        <inlineHelpText>One of the pipeline stages associated with this Sales Process. Each process contains the Stages an Opportunity follows through its sales cycle.</inlineHelpText>
        <label>Stage Name</label>
        <referenceTo>ALTF__Stage__c</referenceTo>
        <relationshipLabel>Sales Process Stages</relationshipLabel>
        <relationshipName>DM_Sales_Process_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Altify Sales Process Stage</label>
    <listViews>
        <fullName>ALTF__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Process Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Sales Process Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ALTF__Check_Green_Amber_Range</fullName>
        <active>true</active>
        <errorConditionFormula>ALTF__Green__c &lt; ALTF__Amber__c</errorConditionFormula>
        <errorMessage>Green % must be greater than Amber %</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ALTF__Duration_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ALTF__Duration__c &lt; 0</errorConditionFormula>
        <errorDisplayField>ALTF__Duration__c</errorDisplayField>
        <errorMessage>Duration must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ALTF__Percentage_check_AP</fullName>
        <active>true</active>
        <errorConditionFormula>ALTF__Amber__c &gt; 1 || ALTF__Amber__c &lt; 0</errorConditionFormula>
        <errorDisplayField>ALTF__Amber__c</errorDisplayField>
        <errorMessage>Only 0-100% is valid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ALTF__Percentage_check_GP</fullName>
        <active>true</active>
        <errorConditionFormula>ALTF__Green__c &gt; 1 || ALTF__Green__c &lt; 0</errorConditionFormula>
        <errorDisplayField>ALTF__Green__c</errorDisplayField>
        <errorMessage>Only 0-100% is valid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ALTF__Percentage_check_QP</fullName>
        <active>true</active>
        <errorConditionFormula>ALTF__Qualification__c  &gt; 1 || ALTF__Qualification__c &lt; 0</errorConditionFormula>
        <errorDisplayField>ALTF__Qualification__c</errorDisplayField>
        <errorMessage>Only 0-100% is valid</errorMessage>
    </validationRules>
</CustomObject>